tests/fixtures/invalid/pow_str_list_list.py
# Cannot call pow() with Str, List[int], List[int]
x = pow("hello", [1, 2, 3], [1, 2, 3])
